Added Attachment model and ability to add/delete attachments with comment
added carrierwave and jquery-fileupload-rails gems

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ tmp/**/*
 config/database.yml
 .byebug_history
 logfile
+public/uploads/*
 
 # Ignore application configuration
 /config/application.yml
